--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         crossorigin="anonymous"></script>
 
 <!--myscript-->
-<script src="config.js"></script>
+<script src="./config.js"></script>
 
 <!--JQuery-->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
