--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
     <style>
 
-        *{
+        * {
             font-family: 'Short Stack', cursive, unbutu;
         }
+
         #map {
             /* the width and height may be set to any size */
             width: 100%;
@@ -31,6 +32,7 @@
         .hidden {
             display: none;
         }
+
         #social_media .btn:hover {
             transition: 500ms;
             background-color: white;
@@ -107,12 +109,14 @@
     <!-- Section: Social media -->
     <section class="mb-3 justify-content-center d-flex pt-5" id="social_media">
         <!-- Linkedin -->
-        <a class="btn btn-outline-dark btn-floating m-1" href="#" role="button"
-        ><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="Linked_in" style="width: 40px; height: 40px;"></i></a>
+        <a class="btn btn-outline-dark btn-floating m-1" href="#" role="button"><img
+                src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg"
+                alt="Linked_in" style="width: 40px; height: 40px;"></a>
 
         <!-- Github -->
         <a class="btn btn-outline-dark btn-floating m-1" href="#" role="button"
-        ><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="github_logo" style="width: 40px; height: 40px"></a>
+        ><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="github_logo"
+              style="width: 40px; height: 40px"></a>
 
     </section>
     <p class="text-center">Follow Me on Social Media!</p>
@@ -140,7 +144,8 @@
 <script src="./config.js"></script>
 
 <!--JQuery-->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+        crossorigin="anonymous"></script>
 <!--GeoCoder-->
 <script src="./js/mapbox-geocoder-utils.js"></script>
 
