--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 <script>
     //after loaded document
     $(document).ready(() => {
-        const WEATHER_KEY = config.WEATHER_API
-        mapboxgl.accessToken = config.MAPBOX_API;
+        const WEATHER_KEY = '0029b0b62fa128718a575fdfda32ba6f'
+        mapboxgl.accessToken = "pk.eyJ1IjoibWFyaW9ncmFuYWRvcyIsImEiOiJja3oyeXVyMnAwMWpkMm5ueHF2ZnhlZmpsIn0.yVQOsReBceDhGPXKHbZxew";
         const MAP_BOX = mapboxgl.accessToken;
         var map = new mapboxgl.Map({
             container: 'map',
