fixed error bug

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!--google stuff-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Short+Stack&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
     <style>
 
         * {
-            font-family: 'Short Stack', cursive, unbutu;
+            font-family: 'Roboto Condensed', sans-serif;
         }
 
         #map {
@@ -50,9 +50,9 @@
 
 </nav>
 
-<div class="jumbotron">
+<div class="jumbotron mb-0">
     <div id="hidden">
-        <h1 class="display-4 text-center">The Weather Map App</h1>
+        <h1 class="display-4 text-center" id="error">The Weather Map App</h1>
         <p class="lead text-center">This app displays the weather forecast for the next 7 days in any desired
             location</p>
         <hr class="my-4">
@@ -109,12 +109,12 @@
     <!-- Section: Social media -->
     <section class="mb-3 justify-content-center d-flex pt-5" id="social_media">
         <!-- Linkedin -->
-        <a class="btn btn-outline-dark btn-floating m-1" href="#" role="button"><img
+        <a class="btn btn-outline-dark btn-floating m-1" href="https://www.linkedin.com/in/mario-granados-18a21b186/" role="button"><img
                 src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg"
                 alt="Linked_in" style="width: 40px; height: 40px;"></a>
 
         <!-- Github -->
-        <a class="btn btn-outline-dark btn-floating m-1" href="#" role="button"
+        <a class="btn btn-outline-dark btn-floating m-1" href="https://github.com/MarioGranados" role="button"
         ><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="github_logo"
               style="width: 40px; height: 40px"></a>
 
@@ -155,12 +155,17 @@
         const WEATHER_KEY = '0029b0b62fa128718a575fdfda32ba6f'
         mapboxgl.accessToken = "pk.eyJ1IjoibWFyaW9ncmFuYWRvcyIsImEiOiJja3oyeXVyMnAwMWpkMm5ueHF2ZnhlZmpsIn0.yVQOsReBceDhGPXKHbZxew";
         const MAP_BOX = mapboxgl.accessToken;
-        var map = new mapboxgl.Map({
+        let map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/streets-v9',
             zoom: 10,
-            center: [-98.4916, 29.4252]
+            center: [-98.4916, 29.4252],
         });
+
+        const nav = new mapboxgl.NavigationControl({
+            visualizePitch: true
+        });
+        map.addControl(nav, 'bottom-right');
 
         //if we need to search a new city, this will allow us to override the current city
         let city = 'San Antonio',
@@ -200,7 +205,7 @@
                     break;
             }
             html =
-                `<div class="card" style="width: 18rem;">
+                `<div class="card m-md-auto" style="width: 18rem;">
                 <div class="card-header text-white text-center bg-dark">
                     ${myDate} <br> ${date}
                 </div>
@@ -255,7 +260,7 @@
             addMarker(lat, long, map);
             map.flyTo({
                 center: [long, lat],
-                zoom: 13,
+                zoom: 11,
                 speed: 1.8,
                 curve: 1,
                 easing(t) {
@@ -291,9 +296,12 @@
                     appendToHTML(myDate, date, value.temp.max, value.temp.min, value.weather[0].description, value.wind_speed, value.humidity, html, value.weather[0].icon)
                     //console.log(value);
 
+                    map.setStyle('mapbox://styles/mapbox/navigation-night-v1');
+
                 })
             }).fail(function () {
-                alert('failed request from weather application');
+                $('#loading').text('');
+                errorLoad();
             });
         }
 
@@ -323,6 +331,13 @@
                 </div>
             </div>`
         }
+
+        function errorLoad() {
+            $('#error').text('We were unable load the current weather at this location, Please Try again later');
+            $('#hidden').removeClass('hidden');
+        }
+
+
     });
 
 </script>
