updated depreciated libs

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="jumbotron mb-0">
     <div id="hidden">
         <h1 class="display-4 text-center" id="error">The Weather Map App</h1>
-        <p class="lead text-center">This app displays the weather forecast for the next 7 days in any desired
+        <p class="lead text-center">This app displays the weather forecast for the next 5 days in any desired
             location</p>
         <hr class="my-4">
         <p class="text-center">click anywhere on the map, or search any location by filling out the information
@@ -131,6 +131,9 @@
 <script src="./js/mapbox-geocoder-utils.js"></script>
 
 <script src='./main.js'></script>
+<script>
+
+</script>
    
 
 </body>
